# hw_2025

./: .flake8  HW_5.py  LICENSE  Makefile  README.md  conftest_homework.py  models_homework.py  my_dream.txt  pyproject.toml
classworks/: test.py
tests_homework/: tests_book.py
